fix(ui): overflowing agent form inputs and text messages (#138)
* fix agent form and overflowing text messages

* fix lint

--- a/apps/web/index.css
+++ b/apps/web/index.css
@@ -42,6 +42,7 @@
 
     :not(:first-child).dv-view {
       @apply border-x border-slate-200;
+      overflow-y: hidden !important;
     }
 
     :not(:first-child).dv-view .dv-tabs-and-actions-container {
